Update  machine learning final.ipynb

--- a/ machine learning final.ipynb
+++ b/ machine learning final.ipynb
@@ -175,24 +175,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "63afe0d9",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('columntransformer',\n",
+       "                 ColumnTransformer(transformers=[('one-hot-encoder',\n",
+       "                                                  OneHotEncoder(handle_unknown='ignore'),\n",
+       "                                                  ['Cert', 'Clarity', 'Color',\n",
+       "                                                   'Measurements', 'Polish',\n",
+       "                                                   'Regions', 'Shape',\n",
+       "                                                   'Symmetry']),\n",
+       "                                                 ('standard_scaler',\n",
+       "                                                  StandardScaler(),\n",
+       "                                                  ['Carats', 'Depth',\n",
+       "                                                   'Known_Conflict_Diamond',\n",
+       "                                                   'Table', 'Vendor'])])),\n",
+       "                ('randomforestregressor', RandomForestRegressor())])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rfr.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "873fc4b5",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.38246089,  6.38206168,  6.394425  , ...,  9.98263804,\n",
+       "       11.66180491,  8.64890808])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = rfr.predict(offer_cleaned)\n",
     "y_pred"
@@ -200,32 +235,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "292c68bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9971313303618318"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rfr.score(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "d0f14874",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y_pred' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_1314/2783999523.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moffer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Offers'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0moffer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Offers'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moffer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Offers'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'y_pred' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "offer['Offers'] = y_pred\n",
     "offer['Offers'] = np.exp(offer['Offers'])"
@@ -254,10 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 29,
    "id": "40f24b9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'predictors_retail' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_59585/2391398307.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mcategorical_columns_selector_retail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype_include\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mnumerical_columns_retail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumerical_columns_selector_retail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictors_retail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mcategorical_columns_retail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcategorical_columns_selector_retail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictors_retail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'predictors_retail' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cleaned2 = training.drop(columns = [\"id\",\"Cut\", \"Retail\", \"Price\", \"LogPrice\"])\n",
     "offer['Vendor'] = offer.Vendor.astype(str)\n",
@@ -283,20 +329,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 26,
    "id": "99022685",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'preprocessor_retail' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_59585/1179584475.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrfrr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_pipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreprocessor_retail\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRandomForestRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'preprocessor_retail' is not defined"
+     ]
+    }
+   ],
    "source": [
     "rfrr = make_pipeline(preprocessor_retail, RandomForestRegressor())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 27,
    "id": "5ff2d513",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'predictors_retail' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_59585/1863545479.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m x_train_retail, x_test_retail, y_train_retail, y_test_retail = train_test_split(\n\u001b[0;32m----> 2\u001b[0;31m     predictors_retail, target_retail, random_state=42)\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'predictors_retail' is not defined"
+     ]
+    }
+   ],
    "source": [
     "x_train_retail, x_test_retail, y_train_retail, y_test_retail = train_test_split(\n",
     "    predictors_retail, target_retail, random_state=42)"
