--- a/ machine learning final.ipynb
+++ b/ machine learning final.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1da5e2a1",
+   "metadata": {},
+   "source": [
+    "ç"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "4ab48c89",
    "metadata": {
     "scrolled": true
@@ -23,8 +31,8 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "import xgboost as xgb\n",
-    "training = pd.read_csv('/Users/ebukaezenwafor/Desktop/jupyter/Analytics_Assessment/training.csv')\n",
-    "offer= pd.read_csv('/Users/ebukaezenwafor/Desktop/jupyter/Analytics_Assessment/offers.csv')\n",
+    "training = pd.read_csv(\"training.csv\")\n",
+    "offer= pd.read_csv('offers.csv')\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
     "\n",
@@ -58,10 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "68a97ad3",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "09591cc8",
    "metadata": {
     "scrolled": false
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "ae2b2ee3",
    "metadata": {
     "scrolled": false
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "2c0de312",
    "metadata": {},
    "outputs": [],
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "f3879550",
    "metadata": {},
    "outputs": [],
@@ -162,11 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "afd129e9",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x_train, x_test, y_train, y_test = train_test_split(\n",
@@ -175,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "63afe0d9",
    "metadata": {
     "scrolled": false
@@ -199,7 +205,7 @@
        "                ('randomforestregressor', RandomForestRegressor())])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "873fc4b5",
    "metadata": {
     "scrolled": false
@@ -219,11 +225,11 @@
     {
      "data": {
       "text/plain": [
-       "array([ 6.38246089,  6.38206168,  6.394425  , ...,  9.98263804,\n",
-       "       11.66180491,  8.64890808])"
+       "array([ 6.37404856,  6.38106699,  6.38036367, ..., 10.00901771,\n",
+       "       11.6394963 ,  8.62433224])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,17 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "292c68bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9971313303618318"
+       "0.9970887385249395"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,10 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "d0f14874",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_1314/2783999523.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moffer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Offers'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0moffer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Offers'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moffer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Offers'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y_pred' is not defined"
+     ]
+    }
+   ],
    "source": [
     "offer['Offers'] = y_pred\n",
     "offer['Offers'] = np.exp(offer['Offers'])"
@@ -288,22 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 387,
    "id": "40f24b9c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'predictors_retail' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_59585/2391398307.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mcategorical_columns_selector_retail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype_include\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mnumerical_columns_retail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumerical_columns_selector_retail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictors_retail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mcategorical_columns_retail\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcategorical_columns_selector_retail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictors_retail\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'predictors_retail' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cleaned2 = training.drop(columns = [\"id\",\"Cut\", \"Retail\", \"Price\", \"LogPrice\"])\n",
     "offer['Vendor'] = offer.Vendor.astype(str)\n",
@@ -329,44 +335,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 169,
    "id": "99022685",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'preprocessor_retail' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_59585/1179584475.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrfrr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_pipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreprocessor_retail\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRandomForestRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'preprocessor_retail' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rfrr = make_pipeline(preprocessor_retail, RandomForestRegressor())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 388,
    "id": "5ff2d513",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'predictors_retail' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/8b/rhjr6r195yx6hmrypmkc_2_w0000gn/T/ipykernel_59585/1863545479.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m x_train_retail, x_test_retail, y_train_retail, y_test_retail = train_test_split(\n\u001b[0;32m----> 2\u001b[0;31m     predictors_retail, target_retail, random_state=42)\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'predictors_retail' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_train_retail, x_test_retail, y_train_retail, y_test_retail = train_test_split(\n",
     "    predictors_retail, target_retail, random_state=42)"
